--- a/html-css-git-exercises/week3/1-website/ordering.html
+++ b/html-css-git-exercises/week3/1-website/ordering.html
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand navbar-light bg-light d-flex justify-content-center font-weight-bold">            
             <ul class="navbar-nav">
                 <li class="nav-item active mr-sm-5">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mr-sm-5 ml-sm-3">
                 <a class="nav-link" href="#">Cakes</a>
